Updated predefined style names to match convention. Also expose them as constants in Lua.

--- a/themes/dark.properties
+++ b/themes/dark.properties
@@ -30,13 +30,13 @@ if PLAT_GTK
 
 # Predefined styles.
 scintillua.styles.default=$(scintillua.styles.font.base),fore:$(scintillua.colors.light_grey),back:$(scintillua.colors.black)
-scintillua.styles.line_number=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.black)
-scintillua.styles.brace_light=fore:$(scintillua.colors.blue),bold
-scintillua.styles.brace_bad=fore:$(scintillua.colors.red)
-scintillua.styles.control_char=
-scintillua.styles.indent_guide=fore:$(scintillua.colors.light_black)
-scintillua.styles.call_tip=fore:$(scintillua.colors.light_grey),back:$(scintillua.colors.light_black)
-scintillua.styles.fold_display_text=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.light_black)
+scintillua.styles.line.number=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.black)
+scintillua.styles.brace.light=fore:$(scintillua.colors.blue),bold
+scintillua.styles.brace.bad=fore:$(scintillua.colors.red)
+scintillua.styles.control.char=
+scintillua.styles.indent.guide=fore:$(scintillua.colors.light_black)
+scintillua.styles.call.tip=fore:$(scintillua.colors.light_grey),back:$(scintillua.colors.light_black)
+scintillua.styles.fold.display.text=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.light_black)
 
 # Predefined tag styles.
 scintillua.styles.attribute=fore:$(scintillua.colors.violet)
