--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -23,13 +23,13 @@ if PLAT_GTK
 
 # Predefined styles.
 scintillua.styles.default=$(scintillua.styles.font.base),fore:$(scintillua.colors.black),back:$(scintillua.colors.white)
-scintillua.styles.line_number=back:#C0C0C0
-scintillua.styles.brace_light=fore:#0000FF,bold
-scintillua.styles.brace_bad=fore:#FF0000,bold
-scintillua.styles.control_char=
-scintillua.styles.indent_guide=fore:#C0C0C0,back:$(scintillua.colors.white)
-scintillua.styles.call_tip=fore:$(scintillua.colors.white),back:#444444
-scintillua.styles.fold_display_text=fore:$(scintillua.colors.grey)
+scintillua.styles.line.number=back:#C0C0C0
+scintillua.styles.brace.light=fore:#0000FF,bold
+scintillua.styles.brace.bad=fore:#FF0000,bold
+scintillua.styles.control.char=
+scintillua.styles.indent.guide=fore:#C0C0C0,back:$(scintillua.colors.white)
+scintillua.styles.call.tip=fore:$(scintillua.colors.white),back:#444444
+scintillua.styles.fold.display.text=fore:$(scintillua.colors.grey)
 
 # Predefined token styles.
 scintillua.styles.attribute=fore:$(scintillua.colors.teal)
