--- a/themes/light.properties
+++ b/themes/light.properties
@@ -29,13 +29,13 @@ if PLAT_GTK
 
 # Predefined styles.
 scintillua.styles.default=$(scintillua.styles.font.base),fore:$(scintillua.colors.black),back:$(scintillua.colors.white)
-scintillua.styles.line_number=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.white)
-scintillua.styles.brace_light=fore:$(scintillua.colors.blue),bold
-scintillua.styles.brace_bad=fore:$(scintillua.colors.red)
-scintillua.styles.control_char=
-scintillua.styles.indent_guide=fore:$(scintillua.colors.light_grey)
-scintillua.styles.call_tip=fore:$(scintillua.colors.black),back:$(scintillua.colors.light_grey)
-scintillua.styles.fold_display_text=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.light_grey)
+scintillua.styles.line.number=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.white)
+scintillua.styles.brace.light=fore:$(scintillua.colors.blue),bold
+scintillua.styles.brace.bad=fore:$(scintillua.colors.red)
+scintillua.styles.control.char=
+scintillua.styles.indent.guide=fore:$(scintillua.colors.light_grey)
+scintillua.styles.call.tip=fore:$(scintillua.colors.black),back:$(scintillua.colors.light_grey)
+scintillua.styles.fold.display.text=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.light_grey)
 
 # Tag styles.
 scintillua.styles.attribute=fore:$(scintillua.colors.violet)
