--- a/themes/dark.properties
+++ b/themes/dark.properties
@@ -45,21 +45,21 @@ scintillua.styles.class=fore:$(scintillua.colors.yellow)
 scintillua.styles.code=fore:$(scintillua.colors.dark_grey),eolfilled
 scintillua.styles.comment=fore:$(scintillua.colors.dark_grey)
 scintillua.styles.constant=
-scintillua.styles.constant.builtin=fore:$(scintillua.colors.magenta)
+scintillua.styles.constant.builtin=fore:$(scintillua.colors.purple)
 scintillua.styles.embedded=fore:$(scintillua.colors.purple)
 scintillua.styles.error=fore:$(scintillua.colors.red)
 scintillua.styles.function=
 scintillua.styles.function.builtin=fore:$(scintillua.colors.orange)
 scintillua.styles.function.method=
-scintillua.styles.heading=fore:$(scintillua.colors.purple)
+scintillua.styles.heading=fore:$(scintillua.colors.magenta)
 scintillua.styles.identifier=
 scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.blue)
-scintillua.styles.label=fore:$(scintillua.colors.purple)
+scintillua.styles.label=fore:$(scintillua.colors.magenta)
 scintillua.styles.link=underlined
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=
-scintillua.styles.preprocessor=fore:$(scintillua.colors.purple)
+scintillua.styles.preprocessor=fore:$(scintillua.colors.magenta)
 scintillua.styles.reference=underlined
 scintillua.styles.regex=fore:$(scintillua.colors.lime)
 scintillua.styles.string=fore:$(scintillua.colors.green)
