Added `lexer.ANNOTATION` tag.

--- a/themes/dark.properties
+++ b/themes/dark.properties
@@ -39,6 +39,7 @@ scintillua.styles.call.tip=fore:$(scintillua.colors.light_grey),back:$(scintillu
 scintillua.styles.fold.display.text=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.light_black)
 
 # Predefined tag styles.
+scintillua.styles.annotation=fore:$(scintillua.colors.magenta)
 scintillua.styles.attribute=fore:$(scintillua.colors.violet)
 scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.yellow)
