--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -32,6 +32,7 @@ scintillua.styles.call.tip=fore:$(scintillua.colors.white),back:#444444
 scintillua.styles.fold.display.text=fore:$(scintillua.colors.grey)
 
 # Predefined token styles.
+scintillua.styles.annotation=
 scintillua.styles.attribute=fore:$(scintillua.colors.teal)
 scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.black),bold
