--- a/themes/light.properties
+++ b/themes/light.properties
@@ -38,6 +38,7 @@ scintillua.styles.call.tip=fore:$(scintillua.colors.black),back:$(scintillua.col
 scintillua.styles.fold.display.text=fore:$(scintillua.colors.dark_grey),back:$(scintillua.colors.light_grey)
 
 # Tag styles.
+scintillua.styles.annotation=fore:$(scintillua.colors.magenta)
 scintillua.styles.attribute=fore:$(scintillua.colors.violet)
 scintillua.styles.bold=bold
 scintillua.styles.class=fore:$(scintillua.colors.yellow)
