Migrated some legacy lexers. Added styles for LaTeX tags.

--- a/themes/dark.properties
+++ b/themes/dark.properties
@@ -85,5 +85,11 @@ scintillua.styles.change=fore:$(scintillua.colors.yellow)
 scintillua.styles.tag.unknown=$(scintillua.styles.tag),italics
 scintillua.styles.attribute.unknown=$(scintillua.styles.attribute),italics
 
+# Latex, TeX, and Texinfo
+scintillua.styles.command=$(scintillua.styles.keyword)
+scintillua.styles.command.section=$(scintillua.styles.class)
+scintillua.styles.environment=$(scintillua.styles.type)
+scintillua.styles.environment.math=$(scintillua.styles.number)
+
 # YAML
 scintillua.styles.error.indent=back:$(scintillua.colors.red)
