--- a/themes/light.properties
+++ b/themes/light.properties
@@ -84,5 +84,11 @@ scintillua.styles.change=fore:$(scintillua.colors.yellow)
 scintillua.styles.tag.unknown=$(scintillua.styles.tag),italics
 scintillua.styles.attribute.unknown=$(scintillua.styles.attribute),italics
 
+# Latex
+scintillua.styles.command=$(scintillua.styles.keyword)
+scintillua.styles.command.section=$(scintillua.styles.class)
+scintillua.styles.environment=$(scintillua.styles.type)
+scintillua.styles.environment.math=$(scintillua.styles.number)
+
 # YAML
 scintillua.styles.error.indent=back:$(scintillua.colors.red)
