--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -78,5 +78,11 @@ scintillua.styles.change=fore:$(scintillua.colors.yellow)
 scintillua.styles.tag.unknown=$(scintillua.colors.light_red)
 scintillua.styles.attribute.unknown=$(scintillua.colors.light_red)
 
+# Latex, TeX, and Texinfo
+scintillua.styles.command=$(scintillua.styles.keyword)
+scintillua.styles.command.section=$(scintillua.styles.class)
+scintillua.styles.environment=$(scintillua.styles.type)
+scintillua.styles.environment.math=$(scintillua.styles.number)
+
 # YAML
 scintillua.styles.error.indent=back:$(scintillua.colors.red)
