Added `lexer.LIST` markup tag.

--- a/themes/dark.properties
+++ b/themes/dark.properties
@@ -58,6 +58,7 @@ scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.blue)
 scintillua.styles.label=fore:$(scintillua.colors.magenta)
 scintillua.styles.link=underlined
+scintillua.styles.list=fore:$(scintillua.colors.teal)
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=
 scintillua.styles.preprocessor=fore:$(scintillua.colors.magenta)
