--- a/themes/light.properties
+++ b/themes/light.properties
@@ -57,6 +57,7 @@ scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.blue)
 scintillua.styles.label=fore:$(scintillua.colors.magenta)
 scintillua.styles.link=underlined
+scintillua.styles.list=fore:$(scintillua.colors.teal)
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=
 scintillua.styles.preprocessor=fore:$(scintillua.colors.magenta)
@@ -84,7 +85,7 @@ scintillua.styles.change=fore:$(scintillua.colors.yellow)
 scintillua.styles.tag.unknown=$(scintillua.styles.tag),italics
 scintillua.styles.attribute.unknown=$(scintillua.styles.attribute),italics
 
-# Latex
+# Latex, TeX, and Texinfo
 scintillua.styles.command=$(scintillua.styles.keyword)
 scintillua.styles.command.section=$(scintillua.styles.class)
 scintillua.styles.environment=$(scintillua.styles.type)
