--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -51,6 +51,7 @@ scintillua.styles.italic=italics
 scintillua.styles.keyword=fore:$(scintillua.colors.blue),bold
 scintillua.styles.label=fore:$(scintillua.colors.teal),bold
 scintillua.styles.link=underlined
+scintillua.styles.list=fore:$(scintillua.colors.teal)
 scintillua.styles.number=fore:$(scintillua.colors.teal)
 scintillua.styles.operator=fore:$(scintillua.colors.black),bold
 scintillua.styles.preprocessor=fore:$(scintillua.colors.yellow)
