Updated tags for some more legacy lexers. This gives proper styling. They'll be properly migrated later.

--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -85,5 +85,14 @@ scintillua.styles.command.section=$(scintillua.styles.class)
 scintillua.styles.environment=$(scintillua.styles.type)
 scintillua.styles.environment.math=$(scintillua.styles.number)
 
+# Makefile
+scintillua.styles.target=
+
+# Markdown
+scintillua.styles.hr=
+
+# XML
+scintillua.styles.cdata=
+
 # YAML
 scintillua.styles.error.indent=back:$(scintillua.colors.red)
