Updated themes with style definitions for tags from migrated lexers.

--- a/themes/light.properties
+++ b/themes/light.properties
@@ -97,6 +97,19 @@ scintillua.styles.target=
 # Markdown
 scintillua.styles.hr=
 
+# Output
+scintillua.styles.filename=
+scintillua.styles.line=
+scintillua.styles.column=
+scintillua.styles.message=
+
+# Taskpaper
+scintillua.styles.note=
+scintillua.styles.tag.extended=
+scintillua.styles.tag.day=fore:$(scintillua.colors.yellow)
+scintillua.styles.tag.overdue=fore:$(scintillua.colors.red)
+scintillua.styles.tag.plain=
+
 # XML
 scintillua.styles.cdata=
 
