Updated file extensions.

--- a/scintillua.properties
+++ b/scintillua.properties
@@ -46,13 +46,13 @@ file.patterns.boo=*.boo
 lexer.$(file.patterns.boo)=scintillua.boo
 file.patterns.csharp=*.cs
 lexer.$(file.patterns.csharp)=scintillua.csharp
-file.patterns.c=*.c;*.cc;*.C
+file.patterns.c=*.c;*.C
 lexer.$(file.patterns.c)=scintillua.ansi_c
-file.patterns.cpp=*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
+file.patterns.cpp=*.cc;*.cpp;*.cxx;*.c++;*.h;*.hh;*.hpp;*.hxx;*.h++
 lexer.$(file.patterns.cpp)=scintillua.cpp
 file.patterns.chuck=*.ck
 lexer.$(file.patterns.chuck)=scintillua.chuck
-file.patterns.clojure=*.clj;*.cljc;*cljs;*.edn
+file.patterns.clojure=*.clj;*.cljs;*.cljc;*.edn
 lexer.$(file.patterns.clojure)=scintillua.clojure
 file.patterns.cmake=*.cmake;*.cmake.in;*.ctest;*.ctest.in
 lexer.$(file.patterns.cmake)=scintillua.cmake
@@ -79,9 +79,9 @@ lexer.$(file.patterns.dot)=scintillua.dot
 file.patterns.eiffel=*.e;*.eif
 lexer.$(file.patterns.eiffel)=scintillua.eiffel
 file.patterns.elixir=*.ex;*.exs
+lexer.$(file.patterns.elixir)=scintillua.elixir
 file.patterns.elm=*.elm
 lexer.$(file.patterns.elm)=scintillua.elm
-lexer.$(file.patterns.elixir)=scintillua.elixir
 file.patterns.erlang=*.erl;*.hrl
 lexer.$(file.patterns.erlang)=scintillua.erlang
 file.patterns.fsharp=*.fs
@@ -90,15 +90,17 @@ file.patterns.fantom=*.fan
 lexer.$(file.patterns.fantom)=scintillua.fantom
 file.patterns.faust=*.dsp
 lexer.$(file.patterns.faust)=scintillua.faust
+file.patterns.fennel=*.fnl
+lexer.$(file.patterns.fennel)=scintillua.fennel
 file.patterns.fish=*.fish
 lexer.$(file.patterns.fish)=scintillua.fish
-file.patterns.forth=*.forth;*.frt;*.fth
+file.patterns.forth=*.forth;*.frt
 lexer.$(file.patterns.forth)=scintillua.forth
 file.patterns.fortran=*.f;*.for;*.ftn;*.fpp;*.f77;*.f90;*.f95;*.f03;*.f08
 lexer.$(file.patterns.fortran)=scintillua.fortran
-file.patterns.fsharp=fstab
+file.patterns.fstab=fstab
 lexer.$(file.patterns.fstab)=scintillua.fstab
-file.patterns.gap=*.g;*.gd;*.gi;*.gap
+file.patterns.gap=*.gd;*.gi;*.gap
 lexer.$(file.patterns.gap)=scintillua.gap
 file.patterns.gemini=*.gmi
 lexer.$(file.patterns.gemini)=scintillua.gemini
@@ -122,13 +124,13 @@ file.patterns.hare=*.ha
 lexer.$(file.patterns.hare)=scintillua.hare
 file.patterns.haskell=*.hs
 lexer.$(file.patterns.haskell)=scintillua.haskell
-file.patterns.html=*.htm;*.html;*.shtm;*.shtml;*.xhtml
+file.patterns.html=*.htm;*.html;*.shtm;*.shtml;*.xhtml;*.vue
 lexer.$(file.patterns.html)=scintillua.html
 file.patterns.icon=*.icn
 lexer.$(file.patterns.icon)=scintillua.icon
 file.patterns.idl=*.idl;*.odl
 lexer.$(file.patterns.idl)=scintillua.idl
-file.patterns.inform=*.inf;*.ni
+file.patterns.inform=*.ni
 lexer.$(file.patterns.inform)=scintillua.inform
 file.patterns.ini=*.cfg;*.cnf;*.inf;*.ini;*.reg
 lexer.$(file.patterns.ini)=scintillua.ini
@@ -214,7 +216,7 @@ file.patterns.pure=*.pure
 lexer.$(file.patterns.pure)=scintillua.pure
 file.patterns.py=*.sc;*.py;*.pyw
 lexer.$(file.patterns.py)=scintillua.python
-file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail;*.S
+file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail
 lexer.$(file.patterns.r)=scintillua.rstats
 file.patterns.reason=*.re
 lexer.$(file.patterns.reason)=scintillua.reason
@@ -240,7 +242,7 @@ file.patterns.scala=*.scala
 lexer.$(file.patterns.scala)=scintillua.scala
 file.patterns.scheme=*.sch;*.scm
 lexer.$(file.patterns.scheme)=scintillua.scheme
-file.patterns.bash=*.bash;*.bashrc;*.bash_profile;*.configure;*.csh;*.sh;*.zsh
+file.patterns.bash=*.bash;*.bashrc;*.bash_profile;*.configure;*.csh;*.ksh;*.mksh;*.sh;*.zsh
 lexer.$(file.patterns.bash)=scintillua.bash
 file.patterns.smalltalk=*.changes;*.st;*.sources
 lexer.$(file.patterns.smalltalk)=scintillua.smalltalk
@@ -262,6 +264,8 @@ file.patterns.texinfo=*.texi
 lexer.$(file.patterns.texinfo)=scintillua.texinfo
 file.patterns.toml=*.toml
 lexer.$(file.patterns.toml)=scintillua.toml
+file.patterns.txt2tags=*.t2t
+lexer.$(file.patterns.txt2tags)=scintillua.txt2tags
 file.patterns.typescript=*.ts
 lexer.$(file.patterns.typescript)=scintillua.typescript
 file.patterns.vala=*.vala
@@ -272,7 +276,7 @@ file.patterns.verilog=*.v;*.ver
 lexer.$(file.patterns.verilog)=scintillua.verilog
 file.patterns.vhdl=*.vh;*.vhd;*.vhdl
 lexer.$(file.patterns.vhdl)=scintillua.vhdl
-file.patterns.vb=*.asa;*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
+file.patterns.vb=*.bas;*.cls;*.ctl;*.dob;*.dsm;*.dsr;*.frm;*.pag;*.vb;*.vba;*.vbs
 lexer.$(file.patterns.vb)=scintillua.vb
 file.patterns.wsf=*.wsf
 lexer.$(file.patterns.wsf)=scintillua.wsf
@@ -282,7 +286,7 @@ file.patterns.xs=*.xs;*.xsin;*.xsrc
 lexer.$(file.patterns.xs)=scintillua.xs
 file.patterns.xtend=*.xtend
 lexer.$(file.patterns.xtend)=scintillua.xtend
-file.patterns.yaml=*.yaml
+file.patterns.yaml=*.yaml;*.yml
 lexer.$(file.patterns.yaml)=scintillua.yaml
 file.patterns.zig=*.zig
 lexer.$(file.patterns.zig)=scintillua.zig
