Updated themes with legacy lexer styles. They will be removed or updated as legacy lexers are migrated.

--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -109,3 +109,71 @@ scintillua.styles.cdata=
 
 # YAML
 scintillua.styles.error.indent=back:$(scintillua.colors.red)
+
+# The following are temporary styles until their legacy lexers are migrated.
+
+# Antlr
+scintillua.styles.action=
+
+# Clojure
+scintillua.styles.clojure_keyword=$(scintillua.styles.type)
+scintillua.styles.clojure_symbol=$(scintillua.styles.type),bold
+
+# Crystal
+#scintillua.styles.symbol=$(scintillua.styles.string)
+
+# Gleam
+scintillua.styles.module=$(scintillua.styles.constant)
+scintillua.styles.discard=$(scintillua.styles.comment)
+
+# Icon
+scintillua.styles.special_keyword=$(scintillua.styles.type)
+
+# jq
+scintillua.styles.format=$(scintillua.styles.constant)
+scintillua.styles.sysvar=$(scintillua.styles.constant),bold
+
+# Julia
+#scintillua.styles.symbol=$(scintillua.styles.string)
+scintillua.styles.character=$(scintillua.styles.constant)
+
+# Mediawiki
+scintillua.styles.behavior_switch=$(scintillua.styles.keyword)
+
+# Meson
+scintillua.styles.object=$(scintillua.styles.type)
+
+# Moonscript
+scintillua.styles.tbl_key=$(scintillua.styles.regex)
+scintillua.styles.self_ref=$(scintillua.styles.label)
+scintillua.styles.proper_ident=$(scintillua.styles.class)
+scintillua.styles.fndef=$(scintillua.styles.preprocessor)
+#scintillua.styles.symbol=$(scintillua.styles.embedded)
+
+# reST
+scintillua.styles.literal_block=$(scintillua.styles.embedded),eolfilled
+scintillua.styles.footnote_block=$(scintillua.styles.label)
+scintillua.styles.citation_block=$(scintillua.styles.label)
+scintillua.styles.link_block=$(scintillua.styles.label)
+scintillua.styles.code_block=$(scintillua.styles.embedded),eolfilled
+scintillua.styles.directive=$(scintillua.styles.keyword)
+scintillua.styles.sphinx_directive=$(scintillua.styles.keyword),bold
+scintillua.styles.unknown_directive=$(scintillua.styles.keyword),italics
+scintillua.styles.substitution=$(scintillua.styles.variable)
+scintillua.styles.inline_literal=$(scintillua.styles.embedded)
+scintillua.styles.role=$(scintillua.styles.class)
+scintillua.styles.interpreted=$(scintillua.styles.string)
+
+# txt2tags
+scintillua.styles.line=bold
+scintillua.styles.h1=$(scintillua.styles.heading)
+scintillua.styles.h2=$(scintillua.styles.heading)
+scintillua.styles.h3=$(scintillua.styles.heading)
+scintillua.styles.h4=$(scintillua.styles.heading)
+scintillua.styles.h5=$(scintillua.styles.heading)
+scintillua.styles.image=fore:$(scintillua.colors.green)
+scintillua.styles.strike=italics # a strike style is not available
+scintillua.styles.tagged=$(scintillua.styles.embedded)
+scintillua.styles.tagged_area=$(scintillua.styles.embedded) # in consistency with tagged
+scintillua.styles.table_sep=fore:$(scintillua.colors.green)
+scintillua.styles.header_cell_content=fore:$(scintillua.colors.green)
