--- a/scintillua.properties
+++ b/scintillua.properties
@@ -836,17 +836,17 @@ keywords6.$(file.patterns.makefile)=scintillua
 keywords7.$(file.patterns.makefile)=scintillua
 keywords8.$(file.patterns.makefile)=scintillua
 keywords9.$(file.patterns.makefile)=scintillua
-file.patterns.man=*.1;*.2;*.3;*.4;*.5;*.6;*.7;*.8;*.9;*.1x;*.2x;*.3x;*.4x;*.5x;*.6x;*.7x;*.8x;*.9x
-lexer.$(file.patterns.man)=scintillua.man
-keywords.$(file.patterns.man)=scintillua
-keywords2.$(file.patterns.man)=scintillua
-keywords3.$(file.patterns.man)=scintillua
-keywords4.$(file.patterns.man)=scintillua
-keywords5.$(file.patterns.man)=scintillua
-keywords6.$(file.patterns.man)=scintillua
-keywords7.$(file.patterns.man)=scintillua
-keywords8.$(file.patterns.man)=scintillua
-keywords9.$(file.patterns.man)=scintillua
+file.patterns.troff=*.1;*.2;*.3;*.4;*.5;*.6;*.7;*.8;*.9;*.1x;*.2x;*.3x;*.4x;*.5x;*.6x;*.7x;*.8x;*.9x;*.ms;*.mm;*.mom;*.me
+lexer.$(file.patterns.troff)=scintillua.man
+keywords.$(file.patterns.troff)=scintillua
+keywords2.$(file.patterns.troff)=scintillua
+keywords3.$(file.patterns.troff)=scintillua
+keywords4.$(file.patterns.troff)=scintillua
+keywords5.$(file.patterns.troff)=scintillua
+keywords6.$(file.patterns.troff)=scintillua
+keywords7.$(file.patterns.troff)=scintillua
+keywords8.$(file.patterns.troff)=scintillua
+keywords9.$(file.patterns.troff)=scintillua
 file.patterns.markdown=*.md
 lexer.$(file.patterns.markdown)=scintillua.markdown
 keywords.$(file.patterns.markdown)=scintillua
