Update scintillua.properties and its generation script.

--- a/scintillua.properties
+++ b/scintillua.properties
@@ -110,6 +110,17 @@ keywords6.$(file.patterns.asp)=scintillua
 keywords7.$(file.patterns.asp)=scintillua
 keywords8.$(file.patterns.asp)=scintillua
 keywords9.$(file.patterns.asp)=scintillua
+file.patterns.autohotkey=*.ahk
+lexer.$(file.patterns.autohotkey)=scintillua.autohotkey
+keywords.$(file.patterns.autohotkey)=scintillua
+keywords2.$(file.patterns.autohotkey)=scintillua
+keywords3.$(file.patterns.autohotkey)=scintillua
+keywords4.$(file.patterns.autohotkey)=scintillua
+keywords5.$(file.patterns.autohotkey)=scintillua
+keywords6.$(file.patterns.autohotkey)=scintillua
+keywords7.$(file.patterns.autohotkey)=scintillua
+keywords8.$(file.patterns.autohotkey)=scintillua
+keywords9.$(file.patterns.autohotkey)=scintillua
 file.patterns.autoit=*.au3;*.a3x
 lexer.$(file.patterns.autoit)=scintillua.autoit
 keywords.$(file.patterns.autoit)=scintillua
