Added Objeck lexer. Thanks to iqskpduswupkcjqg.

--- a/scintillua.properties
+++ b/scintillua.properties
@@ -946,6 +946,17 @@ keywords6.$(file.patterns.nsis)=scintillua
 keywords7.$(file.patterns.nsis)=scintillua
 keywords8.$(file.patterns.nsis)=scintillua
 keywords9.$(file.patterns.nsis)=scintillua
+file.patterns.objeck=*.obs
+lexer.$(file.patterns.objeck)=scintillua.objeck
+keywords.$(file.patterns.objeck)=scintillua
+keywords2.$(file.patterns.objeck)=scintillua
+keywords3.$(file.patterns.objeck)=scintillua
+keywords4.$(file.patterns.objeck)=scintillua
+keywords5.$(file.patterns.objeck)=scintillua
+keywords6.$(file.patterns.objeck)=scintillua
+keywords7.$(file.patterns.objeck)=scintillua
+keywords8.$(file.patterns.objeck)=scintillua
+keywords9.$(file.patterns.objeck)=scintillua
 file.patterns.objective_c=*.m;*.mm;*.objc
 lexer.$(file.patterns.objective_c)=scintillua.objective_c
 keywords.$(file.patterns.objective_c)=scintillua
