Do not highlight Python soft keywords by default.

--- a/themes/scite.properties
+++ b/themes/scite.properties
@@ -97,6 +97,9 @@ scintillua.styles.line=
 scintillua.styles.column=
 scintillua.styles.message=
 
+# Python
+scintillua.styles.keyword_soft=
+
 # Taskpaper
 scintillua.styles.note=
 scintillua.styles.tag.extended=
