--- a/themes/dark.properties
+++ b/themes/dark.properties
@@ -104,6 +104,9 @@ scintillua.styles.line=
 scintillua.styles.column=
 scintillua.styles.message=
 
+# Python
+scintillua.styles.keyword_soft=
+
 # Taskpaper
 scintillua.styles.note=
 scintillua.styles.tag.extended=
