Renamed 'ansi_c', 'dmd', and 'rstats' lexers to 'c', 'd', and 'r', respectively.
Originally this was to prevent clashes with Textadept's language-specific key handling, but this is
no longer applicable.

--- a/scintillua.properties
+++ b/scintillua.properties
@@ -188,7 +188,7 @@ keywords7.$(file.patterns.csharp)=scintillua
 keywords8.$(file.patterns.csharp)=scintillua
 keywords9.$(file.patterns.csharp)=scintillua
 file.patterns.c=*.c;*.C
-lexer.$(file.patterns.c)=scintillua.ansi_c
+lexer.$(file.patterns.c)=scintillua.c
 keywords.$(file.patterns.c)=scintillua
 keywords2.$(file.patterns.c)=scintillua
 keywords3.$(file.patterns.c)=scintillua
@@ -287,7 +287,7 @@ keywords7.$(file.patterns.cuda)=scintillua
 keywords8.$(file.patterns.cuda)=scintillua
 keywords9.$(file.patterns.cuda)=scintillua
 file.patterns.d=*.d;*.di
-lexer.$(file.patterns.d)=scintillua.dmd
+lexer.$(file.patterns.d)=scintillua.d
 keywords.$(file.patterns.d)=scintillua
 keywords2.$(file.patterns.d)=scintillua
 keywords3.$(file.patterns.d)=scintillua
@@ -1123,7 +1123,7 @@ keywords7.$(file.patterns.py)=scintillua
 keywords8.$(file.patterns.py)=scintillua
 keywords9.$(file.patterns.py)=scintillua
 file.patterns.r=*.R;*.Rout;*.Rhistory;*.Rt;Rout.save;Rout.fail
-lexer.$(file.patterns.r)=scintillua.rstats
+lexer.$(file.patterns.r)=scintillua.r
 keywords.$(file.patterns.r)=scintillua
 keywords2.$(file.patterns.r)=scintillua
 keywords3.$(file.patterns.r)=scintillua
