Added Factor lexer.
Thanks to John Benediktsson.

--- a/scintillua.properties
+++ b/scintillua.properties
@@ -407,6 +407,17 @@ keywords6.$(file.patterns.fsharp)=scintillua
 keywords7.$(file.patterns.fsharp)=scintillua
 keywords8.$(file.patterns.fsharp)=scintillua
 keywords9.$(file.patterns.fsharp)=scintillua
+file.patterns.factor=*.factor
+lexer.$(file.patterns.factor)=scintillua.factor
+keywords.$(file.patterns.factor)=scintillua
+keywords2.$(file.patterns.factor)=scintillua
+keywords3.$(file.patterns.factor)=scintillua
+keywords4.$(file.patterns.factor)=scintillua
+keywords5.$(file.patterns.factor)=scintillua
+keywords6.$(file.patterns.factor)=scintillua
+keywords7.$(file.patterns.factor)=scintillua
+keywords8.$(file.patterns.factor)=scintillua
+keywords9.$(file.patterns.factor)=scintillua
 file.patterns.fantom=*.fan
 lexer.$(file.patterns.fantom)=scintillua.fantom
 keywords.$(file.patterns.fantom)=scintillua
